--- a/src/layouts/index.scss
+++ b/src/layouts/index.scss
@@ -1,10 +1,10 @@
 .normal-layout{
   width: 100%;
   height: 100%;
-  .normal-layout-content{
-    width: 100%;
-    height: 100%;
-  }
+}
+.layout-content{
+  width: 100%;
+  height: 100%;
 }
 .z-header{
   display: flex;
