--- a/src/layouts/index.scss
+++ b/src/layouts/index.scss
@@ -6,12 +6,17 @@
   width: 100%;
   height: 100%;
 }
+.main{
+  background: #f5f5f5;
+}
 .z-header{
   display: flex;
-  height: 100%;
+  height: 32px;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  padding: 0 20px;
+  border-bottom: 1px solid var(--el-border-color-light);
 }
 .example-showcase .el-dropdown-link {
   cursor: pointer;
@@ -22,4 +27,8 @@
 .normal-footer{
   background: #545c64;
   color: #ffffff;
+}
+:deep(.el-header){
+  height: auto;
+  padding: 0;
 }
