--- a/src/style.css
+++ b/src/style.css
@@ -71,6 +71,11 @@ button:focus-visible {
   /*text-align: center;*/
 }
 
+.table-slot{
+  flex: 1;
+  min-height: 0;
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
