--- a/src/style.css
+++ b/src/style.css
@@ -23,7 +23,8 @@ a:hover {
   color: #535bf2;
 }
 
-body, html {
+body,
+html {
   margin: 0;
   padding: 0;
   width: 100%;
@@ -71,7 +72,7 @@ button:focus-visible {
   /*text-align: center;*/
 }
 
-.table-slot{
+.table-slot {
   flex: 1;
   min-height: 0;
 }
